2024R2_Test/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/index.md


# `BoundaryConditions`

<a id="summary"></a>

## Summary

### Classes

| Name | Description |
|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
| [`AcousticMassSourceRate`](AcousticMassSourceRate.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticMassSourceRate)                               | Defines a AcousticMassSourceRate.           |
| [`Current`](Current.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Current)                                                                            | Defines a Current.                          |
| [`EMTransducer`](EMTransducer.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.EMTransducer)                                                             | Defines a EMTransducer.                     |
| [`ElectricCharge`](ElectricCharge.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ElectricCharge)                                                       | Defines a ElectricCharge.                   |
| [`HeatFlow`](HeatFlow.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.HeatFlow)                                                                         | Defines a HeatFlow.                         |
| [`HeatFlux`](HeatFlux.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.HeatFlux)                                                                         | Defines a HeatFlux.                         |
| [`InternalHeatGeneration`](InternalHeatGeneration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.InternalHeatGeneration)                               | Defines a InternalHeatGeneration.           |
| [`LoadGroup`](LoadGroup.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.LoadGroup)                                                                      | Defines a LoadGroup.                        |
| [`PipeTemperature`](PipeTemperature.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PipeTemperature)                                                    | Defines a PipeTemperature.                  |
| [`Radiation`](Radiation.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Radiation)                                                                      | Defines a Radiation.                        |
| [`RotatingForce`](RotatingForce.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RotatingForce)                                                          | Defines a RotatingForce.                    |
| [`Temperature`](Temperature.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Temperature)                                                                | Defines a Temperature.                      |
| [`ThermalCondition`](ThermalCondition.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ThermalCondition)                                                 | Defines a ThermalCondition.                 |
| [`Velocity`](Velocity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Velocity)                                                                         | Defines a Velocity.                         |
| [`Voltage`](Voltage.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Voltage)                                                                            | Defines a Voltage.                          |
| [`VoltageGround`](VoltageGround.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.VoltageGround)                                                          | Defines a VoltageGround.                    |
| [`Acceleration`](Acceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Acceleration)                                                             | Defines a Acceleration.                     |
| [`AcousticDiffuseSoundField`](AcousticDiffuseSoundField.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticDiffuseSoundField)                      | Defines a AcousticDiffuseSoundField.        |
| [`BearingLoad`](BearingLoad.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.BearingLoad)                                                                | Defines a BearingLoad.                      |
| [`BodyControl`](BodyControl.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.BodyControl)                                                                | Defines a BodyControl.                      |
| [`BoltPretension`](BoltPretension.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.BoltPretension)                                                       | Defines a BoltPretension.                   |
| [`AcousticIncidentWaveSource`](AcousticIncidentWaveSource.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticIncidentWaveSource)                   | Defines a AcousticIncidentWaveSource.       |
| [`AcousticMassSource`](AcousticMassSource.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticMassSource)                                           | Defines a AcousticMassSource.               |
| [`ContactStepControl`](ContactStepControl.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ContactStepControl)                                           | Defines a ContactStepControl.               |
| [`Convection`](Convection.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Convection)                                                                   | Defines a Convection.                       |
| [`Coupling`](Coupling.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Coupling)                                                                         | Defines a Coupling.                         |
| [`DetonationPoint`](DetonationPoint.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.DetonationPoint)                                                    | Defines a DetonationPoint.                  |
| [`Displacement`](Displacement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Displacement)                                                             | Defines a Displacement.                     |
| [`ElementControls`](ElementControls.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ElementControls)                                                    | Defines a ElementControls.                  |
| [`GeneralizedPlaneStrain`](GeneralizedPlaneStrain.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.GeneralizedPlaneStrain)                               | Defines a GeneralizedPlaneStrain.           |
| [`GenericBoundaryCondition`](GenericBoundaryCondition.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.GenericBoundaryCondition)                         | Defines a GenericBoundaryCondition.         |
| [`HydrostaticPressure`](HydrostaticPressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.HydrostaticPressure)                                        | Defines a HydrostaticPressure.              |
| [`LegacyThermalCondition`](LegacyThermalCondition.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.LegacyThermalCondition)                               | Defines a LegacyThermalCondition.           |
| [`LinePressure`](LinePressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.LinePressure)                                                             | Defines a LinePressure.                     |
| [`NodalDisplacement`](NodalDisplacement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NodalDisplacement)                                              | Defines a NodalDisplacement.                |
| [`NodalForce`](NodalForce.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NodalForce)                                                                   | Defines a NodalDisplacement.                |
| [`NodalOrientation`](NodalOrientation.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NodalOrientation)                                                 | Defines a NodalOrientation.                 |
| [`NodalPressure`](NodalPressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NodalPressure)                                                          | Defines a NodalPressure.                    |
| [`NonlinearAdaptiveRegion`](NonlinearAdaptiveRegion.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NonlinearAdaptiveRegion)                            | Defines a NonlinearAdaptiveRegion.          |
| [`PipePressure`](PipePressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PipePressure)                                                             | Defines a PipePressure.                     |
| [`Pressure`](Pressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Pressure)                                                                         | Defines a Pressure.                         |
| [`RemoteForce`](RemoteForce.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RemoteForce)                                                                | Defines a RemoteForce.                      |
| [`RotationalAcceleration`](RotationalAcceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RotationalAcceleration)                               | Defines a RotationalAcceleration.           |
| [`RotationBoundaryCondition`](RotationBoundaryCondition.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RotationBoundaryCondition)                      | Defines a RotationBoundaryCondition.        |
| [`Force`](Force.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Force)                                                                                  | Defines a Force.                            |
| [`RSLoad`](RSLoad.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RSLoad)                                                                               | Defines a RSLoad.                           |
| [`PSDLoad`](PSDLoad.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PSDLoad)                                                                            | Defines a PSDLoad.                          |
| [`Moment`](Moment.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Moment)                                                                               | Defines a Moment.                           |
| [`RotationalVelocity`](RotationalVelocity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RotationalVelocity)                                           | Defines a RotationalVelocity.               |
| [`RemoteDisplacement`](RemoteDisplacement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RemoteDisplacement)                                           | Defines a RemoteDisplacement.               |
| [`JointLoad`](JointLoad.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.JointLoad)                                                                      | Defines a JointLoad.                        |
| [`AcousticPortInDuct`](AcousticPortInDuct.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPortInDuct)                                           | Defines a AcousticPortInDuct.               |
| [`AcousticAbsorptionElement`](AcousticAbsorptionElement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticAbsorptionElement)                      | Defines a AcousticAbsorptionElement.        |
| [`AcousticAbsorptionSurface`](AcousticAbsorptionSurface.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticAbsorptionSurface)                      | Defines a AcousticAbsorptionSurface.        |
| [`AcousticFarFieldRadationSurface`](AcousticFarFieldRadationSurface.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticFarFieldRadationSurface)    | Defines a AcousticFarFieldRadationSurface.  |
| [`AcousticFreeSurface`](AcousticFreeSurface.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticFreeSurface)                                        | Defines a AcousticFreeSurface.              |
| [`AcousticImpedanceBoundary`](AcousticImpedanceBoundary.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticImpedanceBoundary)                      | Defines a AcousticImpedanceBoundary.        |
| [`AcousticImpedanceSheet`](AcousticImpedanceSheet.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticImpedanceSheet)                               | Defines a AcousticImpedanceSheet.           |
| [`AcousticLowReducedFrequency`](AcousticLowReducedFrequency.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticLowReducedFrequency)                | Defines a AcousticLowReducedFrequency.      |
| [`AcousticPort`](AcousticPort.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPort)                                                             | Defines a AcousticPort.                     |
| [`AcousticPressure`](AcousticPressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPressure)                                                 | Defines a AcousticPressure.                 |
| [`AcousticRadiationBoundary`](AcousticRadiationBoundary.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticRadiationBoundary)                      | Defines a AcousticRadiationBoundary.        |
| [`AcousticRigidWall`](AcousticRigidWall.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticRigidWall)                                              | Defines a AcousticRigidWall.                |
| [`AcousticStaticPressure`](AcousticStaticPressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticStaticPressure)                               | Defines a AcousticStaticPressure.           |
| [`AcousticSurfaceAcceleration`](AcousticSurfaceAcceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticSurfaceAcceleration)                | Defines a AcousticSurfaceAcceleration.      |
| [`AcousticSurfaceVelocity`](AcousticSurfaceVelocity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticSurfaceVelocity)                            | Defines a AcousticSurfaceVelocity.          |
| [`AcousticSymmetryPlane`](AcousticSymmetryPlane.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticSymmetryPlane)                                  | Defines a AcousticSymmetryPlane.            |
| [`AcousticTemperature`](AcousticTemperature.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticTemperature)                                        | Defines a AcousticTemperature.              |
| [`AcousticThermoViscousBLIBoundary`](AcousticThermoViscousBLIBoundary.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticThermoViscousBLIBoundary) | Defines a AcousticThermoViscousBLIBoundary. |
| [`AcousticTransferAdmittanceMatrix`](AcousticTransferAdmittanceMatrix.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticTransferAdmittanceMatrix) | Defines a AcousticTransferAdmittanceMatrix. |
| [`CompressionOnlySupport`](CompressionOnlySupport.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.CompressionOnlySupport)                               | Defines a CompressionOnlySupport.           |
| [`ConstraintEquation`](ConstraintEquation.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ConstraintEquation)                                           | Defines a ConstraintEquation.               |
| [`CoupledPhysicsHeatingObjects`](CoupledPhysicsHeatingObjects.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.CoupledPhysicsHeatingObjects)             | Defines a CoupledPhysicsHeatingObjects.     |
| [`CylindricalSupport`](CylindricalSupport.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.CylindricalSupport)                                           | Defines a CylindricalSupport.               |
| [`EarthGravity`](EarthGravity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.EarthGravity)                                                             | Defines a EarthGravity.                     |
| [`ElasticSupport`](ElasticSupport.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ElasticSupport)                                                       | Defines a ElasticSupport.                   |
| [`ElementBirthAndDeath`](ElementBirthAndDeath.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ElementBirthAndDeath)                                     | Defines a ElementBirthAndDeath.             |
| [`FixedRotation`](FixedRotation.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.FixedRotation)                                                          | Defines a FixedRotation.                    |
| [`FixedSupport`](FixedSupport.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.FixedSupport)                                                             | Defines a FixedSupport.                     |
| [`FluidSolidInterface`](FluidSolidInterface.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.FluidSolidInterface)                                        | Defines a FluidSolidInterface.              |
| [`FrictionlessSupport`](FrictionlessSupport.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.FrictionlessSupport)                                        | Defines a FrictionlessSupport.              |
| [`GeometryBasedAdaptivity`](GeometryBasedAdaptivity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.GeometryBasedAdaptivity)                            | Defines a GeometryBasedAdaptivity.          |
| [`ImpedanceBoundary`](ImpedanceBoundary.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ImpedanceBoundary)                                              | Defines a ImpedanceBoundary.                |
| [`ImportedCFDPressure`](ImportedCFDPressure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ImportedCFDPressure)                                        | Defines a ImportedCFDPressure.              |
| [`LimitBoundary`](LimitBoundary.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.LimitBoundary)                                                          | Defines a LimitBoundary.                    |
| [`MagneticFluxParallel`](MagneticFluxParallel.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.MagneticFluxParallel)                                     | Defines a MagneticFluxParallel.             |
| [`MassFlowRate`](MassFlowRate.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.MassFlowRate)                                                             | Defines a MassFlowRate.                     |
| [`NodalRotation`](NodalRotation.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.NodalRotation)                                                          | Defines a NodalRotation.                    |
| [`PerfectlyInsulated`](PerfectlyInsulated.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PerfectlyInsulated)                                           | Defines a PerfectlyInsulated.               |
| [`PlasticHeating`](PlasticHeating.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PlasticHeating)                                                       | Defines a PlasticHeating.                   |
| [`PSDAcceleration`](PSDAcceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PSDAcceleration)                                                    | Defines a PSDAcceleration.                  |
| [`PSDDisplacement`](PSDDisplacement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PSDDisplacement)                                                    | Defines a PSDDisplacement.                  |
| [`PSDGAcceleration`](PSDGAcceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PSDGAcceleration)                                                 | Defines a PSDGAcceleration.                 |
| [`PSDVelocity`](PSDVelocity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.PSDVelocity)                                                                | Defines a PSDVelocity.                      |
| [`RSAcceleration`](RSAcceleration.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RSAcceleration)                                                       | Defines a RSAcceleration.                   |
| [`RSDisplacement`](RSDisplacement.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RSDisplacement)                                                       | Defines a RSDisplacement.                   |
| [`RSVelocity`](RSVelocity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.RSVelocity)                                                                   | Defines a RSVelocity.                       |
| [`SimplySupported`](SimplySupported.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.SimplySupported)                                                    | Defines a SimplySupported.                  |
| [`SurfaceChargeDensity`](SurfaceChargeDensity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.SurfaceChargeDensity)                                     | Defines a SurfaceChargeDensity.             |
| [`ViscoelasticHeating`](ViscoelasticHeating.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.ViscoelasticHeating)                                        | Defines a ViscoelasticHeating.              |
| [`VolumeChargeDensity`](VolumeChargeDensity.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.VolumeChargeDensity)                                        | Defines a VolumeChargeDensity.              |

<a id="description"></a>

## Description

BoundaryConditions subpackage.

<!-- !! processed by numpydoc !! -->

